# steam-cleaner

./: Cargo.toml  LICENSE  README.md  build.rs  ui.rs
src/: file_cleaner.rs  mac_spoofer.rs  main.rs  registry_cleaner.rs  ui.rs
src/core/: backup.rs  executor.rs  file_cleaner.rs  hardware_profile.rs  inspector.rs  mac_spoofer.rs  mod.rs  privileges.rs  redist.rs  registry_cleaner.rs  sid_spoofer.rs  steam.rs  volumeid_wrapper.rs
src/i18n/: mod.rs
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  ru.json  zh.json
src/ui/: app.rs  mod.rs  redist_view.rs  style.rs
